# graphviper

./: .gitignore  .readthedocs.yaml  CONTRIBUTOR_LICENSING_AGREEMENT.txt  CONTRIBUTOR_LICENSING_AGREEMENT_ESO.txt  LICENSE  MANIFEST.in  README.md  airflow_tutorial.ipynb  client_tutorial.ipynb  graph_building_tutorial.ipynb  pyproject.toml  sd_tutorial.ipynb
.github/workflows/: black.yml  python-publish.yml  python-testing-integration.yml  python-testing-linux.yml  python-testing-macos.yml  pythonpublish.yml  run-ipynb.yml
docs/: airflow_tutorial.ipynb  api.rst  client_tutorial.ipynb  conf.py  download_example.ipynb  graph_building_tutorial.ipynb  graph_building_tutorial_image.ipynb  graph_building_tutorial_processing_set.ipynb  graphviper-logger-formatting-example.ipynb  graphviper_tutorial_ps.ipynb  hsd_baseline_skeleton.ipynb  index.rst  sd_tutorial.ipynb  sphinx.txt  toolviper-logger-formatting-example.ipynb
graphviper/graph_tools/: generate_dask_workflow.py
src/graphviper/: __init__.py
src/graphviper/config/: client.param.json
src/graphviper/dask/: __init__.py  _scheduler.py  _worker.py  client.py  menrva.py
src/graphviper/dask/plugins/: scheduler.py  worker.py
src/graphviper/graph_tools/: __init__.py  append.py  coordinate_utils.py  generate_airflow_workflow.py  generate_dask_workflow.py  generate_prefect_workflow.py  graph.py  map.py  process_with_mpi.py  reduce.py  utils.py
src/graphviper/logger/: __init__.py  logger.py
src/graphviper/parameter_checking/: __init__.py  check_parms.py
src/graphviper/utils/: __init__.py  console.py  logger.py  parameter.py  protego.py
src/graphviper/utils/data/: __init__.py  download.py  drive.py  dropbox.py  remote.py
src/graphviper/utils/data/.dropbox/: file.download.json
src/graphviper/utils/plugins/: worker_logger.py
tests/: simple_test.py  test_client.py  test_cov_append.py  test_cov_coordinate_utils.py  test_cov_generate_airflow_workflow.py  test_cov_generate_dask_workflow.py  test_cov_map.py  test_cov_package_init.py  test_cov_process_with_mpi.py  test_graph_tools.py
