[project]
name = "graphviper"
version = "0.0.8"
description = "Astro Visibility and Image Parallel Execution Reduction "
authors = [
    {name = "Jan-Willem Steeb", email="jsteeb@nrao.edu"},
    {name = "Joshua Hoskins", email="jhoskins@nrao.edu"},
]
license = {file = "LICENSE.txt"}
readme = "README.md"
requires-python = ">= 3.8, < 3.12"

dependencies = [
    'astropy',
    'cerberus',
    'dask',
    'dask_jobqueue',
    'distributed',
    'matplotlib',
    'numba>=0.57.0',
    'numpy<=1.25.0',
    'prettytable',
    'pytest',
    'pytest-cov',
    'pytest-html',
    'scipy',
    'tqdm',
    'xarray',
    'zarr',
    'bokeh',
    'jupyterlab',
    'pyarrow',
    'graphviz',
    'xradio',
    'python_casacore>=3.5.2; sys_platform != "darwin" '
]


[project.optional-dependencies]
docs = [
    'ipykernel',
    'ipympl',
    'ipython',
    'jupyter-client',
    'nbsphinx',
    'recommonmark',
    'scanpydoc',
    'sphinx-autoapi',
    'sphinx-autosummary-accessors',
    'sphinx_rtd_theme',
    'twine',
    'pandoc'
]
