[project]
name = "graphviper"
version = "0.0.28"
description = "Visibility and Image Parallel Execution Reduction for Radio Astronomy"
authors = [
    {name = "Jan-Willem Steeb", email="jsteeb@nrao.edu"},
    {name = "Joshua Hoskins", email="jhoskins@nrao.edu"},
]
license = {file = "LICENSE.txt"}
readme = "README.md"
requires-python = ">= 3.9, < 3.13"

dependencies = [
    'astropy',
    'cerberus',
    'dask',
    'dask_jobqueue',
    'distributed',
    'matplotlib',
    'numba>=0.57.0',
    'numpy',
    'psutil',
    'ipywidgets',
    'prettytable',
    'pytest',
    'pytest-cov',
    'pytest-html',
    'rich',
    'scipy',
    'toolviper',
    'tqdm',
    'xarray',
    'zarr',
    'bokeh',
    'jupyterlab',
    'pyarrow',
    'graphviz',
    'xradio',
    'rich',
    'python_casacore>=3.6.1; sys_platform != "darwin" '
]


[project.optional-dependencies]
docs = [
    'ipykernel',
    'ipympl',
    'ipython',
    'jupyter-client',
    'nbsphinx',
    'recommonmark',
    'scanpydoc',
    'sphinx-autoapi',
    'sphinx-autosummary-accessors',
    'sphinx_rtd_theme',
    'twine',
    'pandoc'
]
