[project]
name = "graphviper"
version = "0.0.35"
description = "Visibility and Image Parallel Execution Reduction for Radio Astronomy "
authors = [
    {name = "Jan-Willem Steeb", email="jsteeb@nrao.edu"},
    {name = "Joshua Hoskins", email="jhoskins@nrao.edu"},
]
license = {file = "LICENSE.txt"}
readme = "README.md"
requires-python = ">= 3.11, < 3.14"

dependencies = [
    'xradio>=1.0.0',
]


[project.optional-dependencies]
python_casacore = [    
    'python_casacore>=3.6.1; sys_platform != "darwin"'
]

test = [
    'pytest',
    'pytest-cov',
    'pytest-html',
]

interactive = [
    'bokeh',
    'graphviz',
    'matplotlib',
    'ipywidgets',
    'prettytable',
    'jupyterlab',
    'ipykernel',
    'ipympl',
    'ipython',
    'jupyter-client',
]


docs = [
    'ipykernel',
    'ipympl',
    'ipython',
    'jupyter-client',
    'nbsphinx',
    'recommonmark',
    'scanpydoc',
    'sphinx-autoapi',
    'sphinx-autosummary-accessors',
    'sphinx_rtd_theme',
    'twine',
    'pandoc'
]

all = [
    'python_casacore>=3.6.1; sys_platform != "darwin"',
    'pytest',
    'pytest-cov',
    'pytest-html',
    'bokeh',
    'graphviz',
    'matplotlib',
    'ipywidgets',
    'prettytable',
    'jupyterlab',
    'ipykernel',
    'ipympl',
    'ipython',
    'jupyter-client',
    'ipykernel',
    'ipympl',
    'ipython',
    'jupyter-client',
    'nbsphinx',
    'recommonmark',
    'scanpydoc',
    'sphinx-autoapi',
    'sphinx-autosummary-accessors',
    'sphinx_rtd_theme',
    'twine',
    'pandoc'
]
